src/objects/Input_and_Output_Values__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AppKey__c</fullName>
        <label>AppKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Component Type</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Input_Output_Value_Name__c</fullName>
        <label>Input Output Value Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Input and Output Values</label>
</CustomObject>